fix projects href

--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
                 using React Hooks, useState.
               </p>
               <p>
-                The source code can be viewed <a href="#">here</a> or click the
-                image to try out the demo.
+                The source code can be viewed
+                <a href="https://github.com/KDOGE007/movie-search">here</a> or
+                click the image to try out the demo.
               </p>
               <div class="project-image container">
                 <a href="https://movie-search-kharn.netlify.app/">
