--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
       </section>
       <section class="aboutMe container">
-        <div class="h1 container visibility">
+        <div class="h1 container">
           <h1>
             I am Kharn Tupmongkol,<br />
             a web developer
