--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@
               <p>
                 A React personal project where the user can search a movie title
                 and look for its' rating and description. This basic web app
-                parse the user input into a request through an API and render
-                the returned result in the same page below. This is achieved by
-                using React Hooks, useState.
+                parse the user input into a request and send it to TMDb,
+                www.themoviedb.org, through an API and render the returned
+                result in the same page below. This is achieved by using React
+                Hooks, useState.
               </p>
               <p>
                 The source code can be viewed
@@ -147,15 +148,15 @@
               <div class="text container">
                 <h3>TODO App</h3>
                 <p>
-                  Everyone favourite project, a Todo App. The user type their
+                  Everyone's favourite project, a Todo App. The user types their
                   todo item and it will populate the item on the same page once
-                  an enter key is pressed. The user can cross off the item list
-                  and also delete the said item from the list. The list will
-                  also persist even if the user refresh or move away from the
-                  page. This was built with a vanilla JS with ES6 syntax where I
-                  can. The persists state was achieved by store the items and
-                  its key in a localstorage area and recall them when the web
-                  page is rerendered.
+                  an enter key is pressed. They cross the items off the list and
+                  also delete them from the list. The list will persist even if
+                  the user refreshes or navigates away from the page. This was
+                  built with a vanilla JS with ES6 syntax whereever I can. The
+                  persists state was achieved by storing the items and its key
+                  in a localstorage area and recall them when the web page is
+                  re-rendered.
                 </p>
                 <p>
                   The source code can be viewed
@@ -166,7 +167,7 @@
                   <a href="https://kdoge007.github.io/todo/"
                     ><img
                       class="project-image"
-                      src="./asset/png/todo.PNG"
+                      src="./asset/jpg/todo.jpg"
                       alt="screenshot of the Todo App"
                   /></a>
                 </div>
