--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
                 <p>
                   Everyone's favourite project, a Todo App. The user types their
                   todo item and it will populate the item on the same page once
-                  an enter key is pressed. They cross the items off the list and
-                  also delete them from the list. The list will persist even if
-                  the user refreshes or navigates away from the page. This was
-                  built with a vanilla JS with ES6 syntax whereever I can. The
-                  persists state was achieved by storing the items and its key
-                  in a localstorage area and recall them when the web page is
+                  an enter key is pressed. They can cross the items and also
+                  delete them from the list. The list will persist even if the
+                  user refreshes or navigates away from the page. This was built
+                  with a vanilla JS with ES6 syntax wherever I can. The persists
+                  state was achieved by storing the items and its key in a
+                  localstorage area and recall them when the web page is
                   re-rendered.
                 </p>
                 <p>
