--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 click the image to try out the demo.
               </p>
               <div class="project-image container">
-                <a href="https://movie-search-kharn.netlify.app/">
+                <a href="https://kdoge007.github.io/movie-search/">
                   <img
                     class="project-image"
                     src="./asset/png/Movie Search App.PNG"
