redo the tech stack for better mobile view

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </p>
           <h2>My current tech stack</h2>
           <section class="tech-list container">
-            <div class="tech card">
+            <div class="tech-card">
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg"
                 alt="html5"
@@ -76,13 +76,13 @@
                 <span>HTML</span>
               </div>
             </div>
-            <div class="tech card">
+            <div class="tech-card">
               <img src="./asset/svg/css3.svg" alt="CSS" class="tech-image" />
               <div class="tech-text">
                 <span>CSS</span>
               </div>
             </div>
-            <div class="tech card">
+            <div class="tech-card">
               <img
                 src="./asset/svg/logo-javascript.svg"
                 alt="Javascript"
@@ -92,7 +92,7 @@
                 <span>Javascript</span>
               </div>
             </div>
-            <div class="tech card">
+            <div class="tech-card">
               <img
                 src="./asset/svg/react-2.svg"
                 alt="React"
@@ -102,7 +102,7 @@
                 <span>React</span>
               </div>
             </div>
-            <div class="tech card">
+            <div class="tech-card">
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Git_icon.svg"
                 alt="Git"
