centering the  header title logo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <img
             src="./asset/svg/K Code Header.svg"
             alt="KT header logo"
-            clas="title-icon"
+            class="title-icon"
           />
         </div>
         <div class="links">
